--- a/css/styles.css
+++ b/css/styles.css
@@ -20,8 +20,7 @@ body {
 .container {
     background-color: beige;
     border-radius: 8px;
-    min-height: 260px;
-    height: 260px;
+    height: 320px;
     width: 400px;
     padding: 2rem;
     box-shadow: 1px 1px 5px 2px rgba(0, 0, 0, 0.175);
@@ -36,6 +35,9 @@ body {
 }
 
 #qr-header h1{
+    justify-content: space-between;
+    display: flex;
+    flex-wrap: nowrap;
     font-size: 1.8rem;
     text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.175);
     margin-bottom: 1.4rem;
